# gamepad_idle_inhibit

./: LICENSE  README.md  meson.build
.github/workflows/: compile.yml  test.yml
include/: StringBuilder.h  assert.h  math.h  memory.h  text.h  type.h
package/gentoo/gui-apps/gamepad_idle_inhibit/: gamepad_idle_inhibit-0.1.2.ebuild
protocol/: meson.build
script/: latest_ci
src/: main.c  text.h
test/: memory_test.c  meson.build  text_test.c
